# robotica

./: .gitignore  LICENSE  PINOUT.ods  README.md  SECURITY.md  nutige-bronnen.txt
PCB/aparte_pcb/Extra board/: Extra board.kicad_pcb  Extra board.kicad_prl  Extra board.kicad_pro  Extra board.kicad_sch
PCB/aparte_pcb/boven/: boven.kicad_prl  boven.kicad_pro  boven.kicad_sch  fp-info-cache
PCB/aparte_pcb/extra_board/: extra_board.kicad_pcb  extra_board.kicad_pro  extra_board.kicad_sch
PCB/aparte_pcb/midden/: fp-info-cache  midden.kicad_prl  midden.kicad_pro  midden.kicad_sch
PCB/aparte_pcb/onder/: fp-info-cache
PCB/libs/: lib.kicad_sym
PCB/libs/Lib.pretty/: AM335X.kicad_mod  ISL29125.kicad_mod  Naamloos.kicad_mod  TB9051FTG.kicad_mod  U1V10FX.kicad_mod  openMV_H7.kicad_mod
PCB/next-pcb/: ideas.txt
PCB/next-pcb/total/: readme.md  total.kicad_pro  total.kicad_sch
PCB/total_pcb/: total_pcb.kicad_sch
code/debug/motors/base_drive/src/: main.cpp
code/debug/motors/with-pid/: with-pid.ino
code/main/: how_to_build_zephr.txt
code/main/teensy_goalie/: CMakeLists.txt  prj.conf  teensy41.overlay
code/main/teensy_goalie/src/: main.c
code/main/teensy_player/: player.yaml  prj.conf
code/main/teensy_player/src/: main.c
setup/: .gitmessage.txt  .xscreensaver  arduino2.desktop  createlivedrive.md  readme.md  recoscript.sh  selectscript.sh  setupscr.sh
